service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-frontend-service
spec:
  type: ClusterIP
  selector:
    app: web-frontend-service
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: http
